CopyJob: fix crash with skip/retry

The crash was happening because I was disconnecting the wrong signal in
the lambda connected to KIO::AskUserActionInterface::askUserSkipResult...

BUG: 431731
FIXED-IN: 5.79